deployment.yml
# 디플로이먼트를 이용한 컨테이너 설정
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pluto-was
  name: pluto-was
spec:
  replicas: 1
  minReadySeconds: 0
  selector:
    matchLabels:
      app: pluto-was
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pluto-was
    spec:
      containers:
        - image: idock.daumkakao.io/onboarding2023/pluto.yun:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8080
          name: was
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 500m
              memory: 500Mi
          readinessProbe:
            httpGet:
              path: /themes
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /themes
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
